--- a/styles/pages/_home.scss
+++ b/styles/pages/_home.scss
@@ -3,10 +3,10 @@
     height: 700px;
     width: 700px;
     position: relative;
-    margin: var(--spacing-48) 0 0 0;
+    margin: var(--spacing-xl) 0 0 0;
 
     @include media('medium') {
-      margin: 0 0 0 var(--spacing-60);
+      margin: 0 0 0 60px;
     }
   }
 
